/** \file
 *
 *  This file contains special DoxyGen information for the generation of the main page and other special
 *  documentation pages. It is not a project source file.
 */

 /** \page Page_ChangeLog Project Changelog
  *
  *  \section Sec_ChangeLogXXXXXX Version XXXXXX
  *  <b>Fixed:</b>
  *  - Core:
  *   - The CALLBACK_USB_GetDescriptor() callback function into the user application erroneously had a uint8_t type for the wIndex
  *     parameter, instead of uint16_t (thanks to Matlo)
  *   - Fixed broken USE_RAM_DESCRIPTORS compile time option when the FIXED_NUM_CONFIGURATIONS compile time option is not enabled
  *     in a user application (thanks to Matlo)
  *   - Fixed missing \c va_end() calls in the HID bootloader CLI app which could cause portability issues
  *   - Fixed void pointer arithmetic in the \c Serial_SendData() functions for AVR8 and XMEGA architectures
  *   - Fixed void pointer arithmetic in the low level and class driver RNDIS demo protocol decoders
  *   - Fixed low level RNDIS demo incorrectly setting the RNDIS state when a null packet filter was requested
  *
  *  \section Sec_ChangeLog151115 Version 151115
  *  <b>New:</b>
  *   - Added support for the Atmel Xplained-MINI series of development kits
  *   - Added new PROGMEM variant send functions to the CDC class device driver (thanks to Stefan Hellermann)
  *   - Added new PROGMEM variant send functions to the CDC class host driver
  *   - Added additional Arduino Uno board definitions for the main processor reset (thanks to NicoHood)
  *   - Added modified DocBook transforms to generate Atmel Studio 6/7 internal help documentation (thanks to Morten Engelhardt Olsen)
  *
  *  <b>Changed:</b>
  *  - Core:
  *   - The TWI peripheral driver's TWI_WritePacket() and TWI_ReadPacket() functions now takes a 16-bit Length rather than an 8-bit
  *     length, for longer transfers
  *  - Library Applications: