@@ -93,8 +93,9 @@
 
 		#if (BOARD == BOARD_NONE)
 			#define BUTTONS_BUTTON1  0
-			static inline void       Buttons_Init(void) {};
-			static inline uint_reg_t Buttons_GetStatus(void) { return 0; };
+			static inline void       Buttons_Init(void) {}
+			static inline void       Buttons_Disable(void) {}
+			static inline uint_reg_t Buttons_GetStatus(void) { return 0; }
 		#elif (BOARD == BOARD_USBKEY)
 			#include "AVR8/USBKEY/Buttons.h"
 		#elif (BOARD == BOARD_STK525)
